--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,6 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:5.4.18.Final'
     runtimeOnly 'mysql:mysql-connector-java:8.0.21'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'org.hibernate:hibernate-jcache:5.4.18.Final'
+    implementation 'org.ehcache:ehcache:3.9.0'
 }
